# MaterialsSearching

./: .gitignore  Batching.py  Filters.py  GnomeSearch.ipynb  MaterialSearchCore.py  README.md  RunDatabaseSearch.py  Searching.ipynb  Util.py  pyproject.toml
